--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fcih.gp.furniturego">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.fcih.gp.furniturego"
+    android:installLocation="auto">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- Tell the system this app requires OpenGL ES 2.0. -->
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <!-- rear facing cam -->
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <!-- users location -->
+    <uses-feature android:name="android.hardware.location" android:required="true" />
+
+    <!-- accelerometer -->
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+
+    <!-- compass -->
+    <uses-feature android:name="android.hardware.sensor.compass" android:required="true" />
+
+    <!-- do not support small resolution screens -->
+    <supports-screens
+        android:smallScreens="false" android:largeScreens="true"
+        android:normalScreens="true" android:anyDensity="true"
+        android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
@@ -7,5 +40,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme"
+        android:resizeableActivity="false"/>
 </manifest>
