--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,32 +14,64 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Tell the system this app requires OpenGL ES 2.0. -->
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <!-- rear facing cam -->
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <!-- users location -->
-    <uses-feature android:name="android.hardware.location" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="true" />
 
     <!-- accelerometer -->
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 
     <!-- compass -->
-    <uses-feature android:name="android.hardware.sensor.compass" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.compass"
+        android:required="true" />
 
     <!-- do not support small resolution screens -->
     <supports-screens
-        android:smallScreens="false" android:largeScreens="true"
-        android:normalScreens="true" android:anyDensity="true"
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="false"
         android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:resizeableActivity="false"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:resizeableActivity="false"/>
+        android:theme="@style/AppTheme">
+
+        <!-- poi detail screen -->
+        <activity android:name=".SamplePoiDetailActivity" />
+
+        <!-- cam activities -->
+        <activity
+            android:name=".SampleCamActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SampleCam2Activity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity
+            android:name=".AutoHdSampleCamActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+    </application>
 </manifest>
