--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary true
     }
     buildTypes {
         release {
@@ -17,17 +18,37 @@ android {
             debuggable true
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name: 'wikitudesdk', ext: 'aar')
+    implementation(name: 'wikitudesdk', ext: 'aar')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:25.4.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:customtabs:25.4.0'
+    implementation 'com.android.support:support-v4:25.4.0'
+    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation 'com.google.firebase:firebase-database:11.0.0'
+    implementation 'com.google.firebase:firebase-auth:11.0.0'
+    implementation 'com.google.firebase:firebase-storage:11.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.google.android.gms:play-services-auth:11.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.22.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
 }
 
 repositories {
     flatDir { dirs 'libs' }
 }
+apply plugin: 'com.google.gms.google-services'
