--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,12 @@ dependencies {
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support:recyclerview-v7:25.4.0'
     implementation 'com.android.support:cardview-v7:25.4.0'
-    implementation 'com.google.firebase:firebase-database:11.0.0'
-    implementation 'com.google.firebase:firebase-auth:11.0.0'
-    implementation 'com.google.firebase:firebase-storage:11.0.0'
+    implementation 'com.google.firebase:firebase-core:11.0.1'
+    implementation 'com.google.firebase:firebase-database:11.0.1'
+    implementation 'com.google.firebase:firebase-auth:11.0.1'
+    implementation 'com.google.firebase:firebase-storage:11.0.1'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
-    implementation 'com.google.android.gms:play-services-auth:11.0.0'
+    implementation 'com.google.android.gms:play-services-auth:11.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.22.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
