--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.google.android.gms:play-services-auth:11.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.22.0'
+    implementation 'com.twitter.sdk.android:twitter:3.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
