--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.fcih.gp.furniturego"
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+    implementation 'me.grantland:autofittextview:0.2.1'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+
 }
 
 repositories {
