Splash Screen Added , Camera Navigation  ,App Logo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,19 +71,20 @@
         <activity
             android:name=".AutoHdSampleCamActivity"
             android:configChanges="orientation|keyboardHidden|screenSize">
-
         </activity>
 
         <!-- App activities -->
-        <activity
-            android:name=".BaseActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".BaseActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
             android:name="com.facebook.CustomTabActivity"
@@ -119,4 +120,5 @@
         </activity>
 
     </application>
+
 </manifest>
