--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
     }
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation(name: 'wikitudesdk', ext: 'aar')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -51,7 +51,6 @@ dependencies {
     implementation 'me.grantland:autofittextview:0.2.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
     implementation 'com.liulishuo.filedownloader:library:1.5.6'
-
 }
 
 repositories {
