--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,12 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:25.4.0'
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:exifinterface:25.4.0'
     implementation 'com.android.support:appcompat-v7:25.4.0'
     implementation 'com.android.support:customtabs:25.4.0'
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support:recyclerview-v7:25.4.0'
     implementation 'com.android.support:cardview-v7:25.4.0'
-    implementation 'com.google.firebase:firebase-core:11.0.1'
     implementation 'com.google.firebase:firebase-database:11.0.1'
     implementation 'com.google.firebase:firebase-auth:11.0.1'
     implementation 'com.google.firebase:firebase-storage:11.0.1'
@@ -47,13 +46,15 @@ dependencies {
     implementation 'com.twitter.sdk.android:twitter:3.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     implementation 'me.grantland:autofittextview:0.2.1'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.6'
     implementation 'com.liulishuo.filedownloader:library:1.5.6'
+    implementation 'com.koushikdutta.ion:ion:2.2.1'
 }
 
 repositories {
+    jcenter()
     flatDir { dirs 'libs' }
 }
 apply plugin: 'com.google.gms.google-services'
