--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,11 @@
 
         <!-- poi detail screen -->
 
+
         <!-- cam activities -->
         <activity
             android:name=".SampleCamActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".SampleCam2Activity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
@@ -69,19 +69,20 @@
         <activity android:name=".Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".BaseActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustNothing">
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"></meta-data>
+                android:resource="@xml/searchable" />
         </activity>
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -94,7 +95,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
