--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
 }
 
